# forte2

./: .gitignore  .readthedocs.yml  AGENTS.md  CMakeLists.txt  README.md  environment.yml  pyproject.toml
forte2/: CMakeLists.txt  __init__.py  _forte2.pyi  codecov.yml  forte2-cxx-api.pyi  mods_manager.py
forte2/_forte2/: __init__.pyi  cpp_helpers.pyi  dsrg_utils.pyi  ints.pyi
forte2/api/: ci_api.cc  determinant_api.cc  determinant_helpers_api.cc  dsrg_api.cc  forte2_api.cc  helpers_api.cc  integrals_api.cc  integrals_api.h  logging_api.cc  sci_api.cc  slater_rules.cc  slater_rules_api.cc  sparse_exp_api.cc  sparse_operator_api.cc  sparse_rdms_api.cc  sparse_state_api.cc  sq_operator_string_api.cc  state_api.cc
forte2/base_classes/: __init__.py  active_space_solver.py  ci_base.py  method.py  mixins.py  mo.py  params.py  results.py
forte2/cc/: __init__.py  cc.py  ccsd.py
forte2/ci/: __init__.py  bitarray.hpp  bitwise_operations.hpp  ci.py  ci_occupation.cc  ci_occupation.h  ci_sigma_builder.cc  ci_sigma_builder.h  ci_sigma_builder_1rdm.cc  ci_sigma_builder_1trdm.cc  ci_sigma_builder_2rdm.cc  ci_sigma_builder_3rdm.cc  ci_sigma_builder_harrison_zarrabian.cc  ci_sigma_builder_knowles_handy.cc  ci_sigma_builder_spin2.cc  ci_sigma_builder_test_rdms.cc  ci_solver_initial_guess.cc  ci_solver_rdms.cc  ci_solver_transition_rdms.cc  ci_spin_adapter.cc  ci_spin_adapter.h  ci_string_address.cc  ci_string_address.h  ci_string_class.cc  ci_string_class.h  ci_string_defs.h  ci_string_lists.cc  ci_string_lists.h  ci_string_lists_makers.cc  ci_string_lists_makers.h  ci_strings.cc  ci_strings.h  ci_strings_defs.h  ci_strings_makers.cc  ci_strings_makers.h  ci_utils.py  ci_vector.cc  ci_vector.h  ci_vector_h_diag.cc  ci_vector_hamiltonian.cc  (+41 more)
forte2/data/: __init__.py  atom_data.py  otterbein_symmetry_db.json
forte2/determinant/: bitarray.hpp  bitwise_operations.hpp  ci_spin_adapter.cc  ci_spin_adapter.h  configuration.hpp  determinant.h  determinant.hpp  determinant_helpers.cc  determinant_helpers.h  rel_slater_rules.cc  rel_slater_rules.h  slater_rules.cc  slater_rules.h  string.hpp
forte2/dsrg/: __init__.py  df_mp2.py  dsrg_base.py  dsrg_common.py  dsrg_mrpt2.py  dsrg_mrpt2_debug.py  dsrg_mrpt2_df.py  dsrg_mrpt3.py  dsrg_utils.cc  dsrg_utils.h  rel_dsrg_common.py  rel_dsrg_mrpt2.py  rel_dsrg_mrpt2_slow.py  rel_dsrg_mrpt3.py  sf_dsrg_mrpt2.py  utils.py  wicked_contractions.py
forte2/gradients/: __init__.py  rhf.py  utils.py
forte2/helpers/: __init__.py  blas.h  cartesian_product.hpp  combinatorial.cc  combinatorial.h  comparisons.py  davidsonliu.py  determinant_helpers.cc  determinant_helpers.h  diis.py  hash_combine.h  indexing.hpp  lbfgs.py  logger.h  logger.py  math_structures.h  matrix_functions.py  memory.h  mixins.py  multiplicity_labels.py  ndarray.h  np_matrix_functions.cc  np_matrix_functions.h  np_vector_functions.cc  np_vector_functions.h  numeric.hpp  orbital_utils.py  parallel.h  printing.hpp  sorting.hpp  spin.h  string_algorithms.cc  string_algorithms.h  sum.hpp  table.py  timer.hpp  unordered_dense.h
forte2/integrals/: __init__.py  basis.cc  basis.h  cholesky.py  deriv_utils.h  fock_builder.cc  fock_builder.h  integrals.py  libcint_compute.h  libcint_integrals.py  libcint_one_electron.cc  libcint_one_electron.h  libcint_three_center.h  libcint_two_center.cc  libcint_two_center.h  libcint_utils.py  nuclear_repulsion.cc  one_electron.cc  one_electron.h  one_electron_compute.h  one_electron_deriv.cc  one_electron_deriv.h  one_electron_deriv_compute.h  real_spherical_harmonics.hpp  two_electron.cc  two_electron.h  two_electron_compute.h  two_electron_deriv.cc  two_electron_deriv.h  two_electron_deriv_compute.h  value_at_points.cc  value_at_points.h
forte2/ints/: __init__.py  basis.cc  basis.h  fock_builder.cc  fock_builder.h  libcint_integrals.py  libcint_utils.py  nuclear_repulsion.cc  nuclear_repulsion.h  one_electron.cc  one_electron.h  one_electron_compute.h  overlap.cc  overlap.h  real_spherical_harmonics.hpp  two_electron.cc  two_electron.h  two_electron_compute.h  value_at_points.cc  value_at_points.h
forte2/jkbuilder/: __init__.py  jkbuilder.py  mointegrals.py
forte2/libcint/: CMakeLists.txt  __init__.py  elements.py  libcgto.dylib  libcvhf.dylib  libnp_helper.dylib  moleintor.py  utils.py
forte2/localizer/: __init__.py  spectral_localizer.py
forte2/mcopt/: __init__.py  mc_optimizer.py  orbital_optimizer.py
forte2/mp/: __init__.py  dfmp2.py  mp2_base.py  rmp2.py  romp2.py  ump2.py  utils.py
forte2/optimize/: __init__.py  geometry_optimizer.py
forte2/orbitals/: __init__.py  aset.py  avas.py  converters.py  cube.py  cube_generator.py  extents.py  iao.py  mo_space.py  molden.py  natural_orbitals.py  orbital_blocks.py  semicanonicalizer.py
forte2/orbopt/: __init__.py  orbital_optimizer.py  rel_orbital_optimizer.py
forte2/prop/: __init__.py  prop.py
forte2/props/: __init__.py  mp2_cumulant.py  mutual_correlation.py  props.py
forte2/scf/: __init__.py  cuhf.py  ghf.py  hf.py  initial_guess.py  repair_symmetry.py  rhf.py  rohf.py  scf_base.py  scf_utils.py  sfx2c1e.py  uhf.py  x2c.py
forte2/sci/: __init__.py  sci.py  sci_helper.cc  sci_helper.h  sci_helper_1rdm.cc  sci_helper_1trdm.cc  sci_helper_2rdm.cc  sci_helper_select.cc  sci_helper_select_hbci.cc  sci_helper_sigma_build.cc  sci_helper_spin.cc  sci_strings.cc  sci_strings.h
forte2/siso/: __init__.py  relci.py  siso.py
forte2/sparse/: sparse.h  sparse_exp.cc  sparse_exp.h  sparse_operator.h  sparse_operator_hamiltonian.cc  sparse_operator_hamiltonian.h  sparse_rdms.h  sparse_state.cc  sparse_state.h  sparse_state_functions.cc  sq_operator_string.cc  sq_operator_string.h
forte2/state/: __init__.py  mo_space.py  state.py
forte2/symmetry/: __init__.py  assign_mo_sym.py  mo_sym_detect.py  pg_sym_detect.py  sph_harm_utils.py  sym_detect.py  sym_utils.py  symmetry.py
forte2/system/: __init__.py  atom_data.py  basis_utils.py  build_basis.py  geom_utils.py  parse_geometry.py  parse_xyz.py  system.py
forte2/utils/: mutual_correlation_plot.py  spectrum.py
forte2/x2c/: __init__.py  (+1 more)
(+237 files in other folders)
